# ZVault

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  opencode.json  package-lock.json  railpack.json  railpack.toml  railway.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release-notes.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
Formula/: zvault.rb
crates/vaultrs-cli/: Cargo.toml
crates/vaultrs-cli/src/: license.rs  main.rs  mcp.rs
crates/vaultrs-core/: Cargo.toml
crates/vaultrs-core/src/: audit.rs  audit_file.rs  barrier.rs  crypto.rs  error.rs  lease.rs  lib.rs  mount.rs  pki.rs  policy.rs  seal.rs  token.rs  transit.rs
crates/vaultrs-server/: Cargo.toml
crates/vaultrs-server/src/: config.rs  error.rs  hardening.rs  lib.rs  main.rs  middleware.rs  state.rs
crates/vaultrs-server/src/routes/: approle.rs  auth.rs  dashboard.rs  database.rs  docs.rs  leases.rs  mod.rs  mounts.rs  oidc.rs  pki.rs  policy.rs  secrets.rs  sys.rs  transit.rs  ui.rs
crates/vaultrs-storage/: Cargo.toml
crates/vaultrs-storage/src/: lib.rs  memory.rs  postgres_backend.rs  redb_backend.rs  rocksdb_backend.rs
crates/zvault-cli/: Cargo.toml  README.md
crates/zvault-cli/src/: cloud.rs  license.rs  main.rs  mcp.rs  setup.rs
crates/zvault-cli/tests/: cli_tests.rs
crates/zvault-core/: Cargo.toml  README.md
crates/zvault-core/src/: approle.rs  audit.rs  audit_file.rs  barrier.rs  crypto.rs  database.rs  engine.rs  error.rs  lease.rs  lib.rs  mount.rs  pki.rs  policy.rs  seal.rs  transit.rs
crates/zvault-server/: Cargo.toml  README.md
crates/zvault-server/src/: config.rs  error.rs  hardening.rs  lib.rs  main.rs  middleware.rs  state.rs
crates/zvault-server/src/cloud/: auth.rs  error.rs  mod.rs  models.rs  repository.rs
crates/zvault-server/src/cloud/routes/: audit.rs  auth_routes.rs  mod.rs  orgs.rs  projects.rs  secrets.rs  tokens.rs
crates/zvault-server/src/routes/: approle.rs  auth.rs  database.rs  docs.rs  leases.rs  metrics.rs  mounts.rs  oidc.rs  pki.rs  policy.rs  secrets.rs  sys.rs  transit.rs  ui.rs
crates/zvault-storage/: Cargo.toml  README.md
crates/zvault-storage/src/: error.rs  lib.rs  memory.rs  postgres_backend.rs  redb_backend.rs  rocksdb_backend.rs
dashboard/: .env.example  index.html  package-lock.json  package.json  railway.toml  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: Sidebar.tsx  Table.tsx  Topbar.tsx
dashboard/src/hooks/: useAuth.ts
dashboard/src/layouts/: DashboardLayout.tsx
dashboard/src/lib/: api.ts  clerk.ts  cloud-api.ts
dashboard/src/pages/: Audit.tsx  AuthMethods.tsx  Billing.tsx  Dashboard.tsx  Init.tsx  Leases.tsx  Login.tsx  Policies.tsx  Secrets.tsx  Unseal.tsx
docs/: AUDIT.md  CLERK_BILLING_GUIDE.md  DASHBOARD_PLAN.md  DESIGN.md  MCP_TOOLS_ROADMAP.md  MONETIZATION.md  REDESIGN_PLAN.md  ROADMAP.md
docs-site/: app.config.ts  astro.config.mjs  nuxt.config.ts  package-lock.json  package.json  railway.toml
docs-site/content/: index.md
docs-site/content/1.getting-started/: 1.introduction.md  (+2 more)
migrations/: 001_initial.sql  002_cloud.sql
npm/: README.md  install.js  package.json
scripts/: publish.sh
sdks/aspnet/: README.md
sdks/aws-codebuild/: README.md  buildspec-helper.sh
sdks/azure-devops/: README.md  index.js  task.json
sdks/bitbucket-pipe/: README.md  pipe.sh  pipe.yml
sdks/buildkite/: README.md  plugin.yml
sdks/circleci-orb/: README.md  orb.yml
sdks/cloud-run/: README.md
sdks/cloudflare-workers/: README.md
sdks/coolify/: README.md
sdks/deno-deploy/: README.md
sdks/django/: README.md  pyproject.toml
sdks/docker/: README.md  zvault-entrypoint.sh
sdks/docker-compose/: README.md  docker-compose.zvault.yml
sdks/dotnet/: README.md  ZVault.SDK.csproj  ZVaultClient.cs
sdks/drone-ci/: README.md
sdks/ecs/: README.md
sdks/elixir/: README.md  mix.exs
sdks/fastapi/: README.md  pyproject.toml
sdks/fiber/: README.md  main.go
sdks/flask/: README.md  pyproject.toml
sdks/flyio/: README.md
sdks/gin/: README.md  main.go
sdks/github-action/: README.md  action.yml  package-lock.json  package.json
sdks/github-app/: README.md
sdks/gitlab-ci/: README.md  inject-secrets.sh  template.yml
sdks/go/: README.md  go.mod  zvault.go
sdks/heroku/: README.md
sdks/hono/: README.md  package.json  tsup.config.ts
sdks/java/: README.md  pom.xml
sdks/jenkins/: README.md
sdks/jetbrains/: README.md  build.gradle.kts
sdks/k8s-csi-driver/: README.md
sdks/k8s-webhook/: README.md
sdks/kubernetes/: README.md
sdks/lambda-layer/: README.md  bootstrap.sh
sdks/laravel/: README.md  composer.json
sdks/migrate/: README.md
sdks/neovim/: README.md
sdks/nestjs/: README.md  package.json  tsconfig.json  tsup.config.ts
sdks/netlify/: README.md  index.js  manifest.yml
sdks/nextjs/: README.md  package.json  tsconfig.json  tsup.config.ts
sdks/node/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdks/php/: README.md  composer.json
sdks/pre-commit/: .pre-commit-hooks.yaml  README.md  zvault-scan.sh
sdks/pulumi/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/zvault/: __init__.py  client.py  errors.py
sdks/rails/: README.md  zvault-rails.gemspec
sdks/railway/: README.md
sdks/render/: README.md
sdks/rotation/: README.md
sdks/ruby/: README.md  zvault.gemspec
sdks/rust/: Cargo.toml
sdks/rust/src/: client.rs  error.rs  lib.rs  types.rs
sdks/spring-boot/: README.md  pom.xml
sdks/supabase/: README.md
sdks/swift/: Package.swift  README.md
sdks/tekton/: README.md  zvault-task.yaml
sdks/terraform/: README.md  go.mod  main.go
sdks/vercel/: README.md
sdks/vscode/: README.md  package.json
website/: astro.config.mjs  package-lock.json  package.json  railway.toml  tailwind.config.mjs
website/public/: install.sh
(+142 files in other folders)
