[workspace]
resolver = "2"
members = [
    "crates/zvault-storage",
    "crates/zvault-core",
    "crates/zvault-server",
    "crates/zvault-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VanitasCaesar1/zvault"
homepage = "https://zvault.cloud"
documentation = "https://docs.zvault.cloud"
readme = "README.md"
keywords = ["secrets", "vault", "encryption", "mcp", "ai"]
categories = ["command-line-utilities", "cryptography", "development-tools"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "fs"] }
anyhow = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"], default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
