[package]
name = "vaultrs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZVault CLI — command-line client for the ZVault secrets manager"

[[bin]]
name = "zvault"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow.workspace = true
ed25519-dalek = { version = "2", features = ["pkcs8"] }
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
