[package]
name = "vaultrs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for ZVault — barrier, seal, crypto, tokens, policies"

[lints]
workspace = true

[dependencies]
vaultrs-storage = { path = "../vaultrs-storage", default-features = false }

async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
sharks = "0.5"
uuid = { version = "1", features = ["v4"] }
subtle = "2"
chrono = { version = "0.4", features = ["serde"] }
glob-match = "0.2"
rcgen = "0.13"
