[package]
name = "vaultrs-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VaultRS HTTP server — API, UI, and system routes"

[lints]
workspace = true

[dependencies]
vaultrs-core = { path = "../vaultrs-core" }
vaultrs-storage = { path = "../vaultrs-storage", default-features = false }

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["rocksdb-backend"]
rocksdb-backend = ["vaultrs-storage/rocksdb-backend"]
redb-backend = ["vaultrs-storage/redb-backend"]
