[package]
name = "vaultrs-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZVault HTTP server — API, UI, and system routes"

[lints]
workspace = true

[dependencies]
vaultrs-core = { path = "../vaultrs-core" }
vaultrs-storage = { path = "../vaultrs-storage", default-features = false }

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }
sha2 = { version = "0.10", optional = true }
urlencoding = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["rocksdb-backend", "spring-oauth"]
rocksdb-backend = ["vaultrs-storage/rocksdb-backend"]
redb-backend = ["vaultrs-storage/redb-backend"]
postgres-backend = ["vaultrs-storage/postgres-backend"]
spring-oauth = ["dep:reqwest", "dep:sha2"]
