[package]
name = "vaultrs-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage backend abstraction for ZVault"

[lints]
workspace = true

[features]
default = ["rocksdb-backend"]
rocksdb-backend = ["dep:rocksdb"]
redb-backend = ["dep:redb"]
postgres-backend = ["dep:sqlx"]

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

rocksdb = { version = "0.22", optional = true }
redb = { version = "2", optional = true }
sqlx = { workspace = true, optional = true }
