[package]
name = "zvault-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["vault", "secrets", "cli", "mcp", "ai"]
categories = ["command-line-utilities", "cryptography", "development-tools"]
description = "ZVault CLI — AI-native secrets manager. Import .env files, inject secrets at runtime, MCP server for AI coding assistants"

[[bin]]
name = "zvault"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow.workspace = true
ed25519-dalek = { version = "2", features = ["pkcs8"] }
base64 = "0.22"
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
