[package]
name = "zvault-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["vault", "secrets", "server", "api", "encryption"]
categories = ["web-programming::http-server", "cryptography"]
description = "ZVault HTTP server — REST API, web dashboard, and system routes for the AI-native secrets manager"

[lints]
workspace = true

[dependencies]
zvault-core = { path = "../zvault-core", version = "0.2.0" }
zvault-storage = { path = "../zvault-storage", version = "0.2.0", default-features = false }

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }
sha2 = { version = "0.10", optional = true }
urlencoding = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["rocksdb-backend", "spring-oauth"]
rocksdb-backend = ["zvault-storage/rocksdb-backend"]
redb-backend = ["zvault-storage/redb-backend"]
postgres-backend = ["zvault-storage/postgres-backend"]
spring-oauth = ["dep:reqwest", "dep:sha2"]
