[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zvault"
version = "0.1.0"
description = "Official ZVault SDK for Python — fetch secrets at runtime from ZVault Cloud"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "ZVault", email = "hello@zvault.cloud" }]
keywords = ["zvault", "secrets", "secrets-manager", "env", "cloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.25.0"]

[project.urls]
Homepage = "https://zvault.cloud"
Repository = "https://github.com/ArcadeLabsInc/zvault"
Documentation = "https://docs.zvault.cloud"

[tool.hatch.build.targets.wheel]
packages = ["zvault"]
